--- a/extension/popup.html
+++ b/extension/popup.html
@@ -4,15 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Playtest Popup</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="popup.css" />
-    <link rel="stylesheet" href="popup-fixed.css" />
+    <script src="tailwind.min.js"></script>
   </head>
-  <body>
+  <body class="w-96 min-h-96 font-sans bg-slate-900 text-slate-100 m-0 p-0">
     <div id="root"></div>
     <script src="lib/react.production.min.js"></script>
     <script src="lib/react-dom.production.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="popup.js"></script>
   </body>
 </html>
