--- a/extension/popup.html
+++ b/extension/popup.html
@@ -10,6 +10,11 @@
     <div id="root"></div>
     <script src="lib/react.production.min.js"></script>
     <script src="lib/react-dom.production.min.js"></script>
+    <script src="actions.js"></script>
+    <script src="utils.js"></script>
+    <script src="components/Header.js"></script>
+    <script src="components/StepsBuilder.js"></script>
+    <script src="components/App.js"></script>
     <script src="popup.js"></script>
   </body>
 </html>
